--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body data-new-gr-c-s-check-loaded="14.1076.0" data-gr-ext-installed="">
     <div class="container">
       <header class="header">
-        <h1 id="title" class="text-center">freeCodeCamp Survey Form</h1>
+        <h1 id="title" class="text-center">Micro verse Survey Form</h1>
         <p id="description" class="description text-center">
           Thank you for taking the time to help us improve the platform
         </p>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="form-group">
-          <p>Would you recommend freeCodeCamp to a friend?</p>
+          <p>Would you recommend Micro verse to a friend?</p>
           <label>
             <input name="user-recommend" value="definitely" type="radio" class="input-radio" checked="">Definitely</label>
           <label>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="form-group">
-          <p>What is your favorite feature of freeCodeCamp?</p>
+          <p>What is your favorite feature of Micro verse</p>
           <select id="most-like" name="mostLike" class="form-control" required="">
             <option disabled="" selected="" value="">Select an option</option>
             <option value="challenges">Challenges</option>
